--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,5 +1,7 @@
-<nav>
+<nav class="site-nav">
+  <ul>
   {% for item in site.data.navigation %}
-    <a href="/LAMAS{{ item.link }}"{% if page.url == item.link %} class="current"{% endif %}>{{ item.name }}</a>
+    <li><a href="{{ item.link }}"{% if page.url == item.link %} class="current"{% endif %}>{{ item.name }}</a></li>
   {% endfor %}
+  </ul>
 </nav>
