--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/LAMAS/assets/css/styles.css">
+    <link rel="stylesheet" href="/LAMAS/assets/css/styles.css"> {%comment%} remove /LAMAS/ before link for local testing {%endcomment%}
     {% feed_meta %}
     {% seo %}
   </head>
