--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -5,13 +5,12 @@ body {
 }
 
 .navbar {
-  position: sticky;
-  display: inline-block;
+  position: fixed;
   top: 12px;
   bottom: 12px;
   left: 12px;
-  max-width: 18%;
-  height: 100%;
+  width: 18%;
+  height: 97%;
   background-color: #bdd5f8;
   border-radius: 21px;
 }
@@ -38,7 +37,15 @@ body {
   font-weight: 600;
 }
 
-.navbar .site-nav a:hover, .site-nav a.current {
+.navbar .site-nav a:hover:not(.current) {
+  background: #b1ccf6;
+}
+
+.navbar .site-nav a.current:hover {
+  background: #3277dd;
+}
+
+.navbar .site-nav a.current {
   background: #4085ed;
   color: #fff;
 }
@@ -65,6 +72,7 @@ body {
 }
 
 .contentBox {
+    margin-left: 18%;
     display: inline-block;
-    padding: 50px;
+    padding: 28px;
 }
