--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="site-nav">
   <ul>
   {% for item in site.data.navigation %}
-    <li><a href="{{ item.link }}"{% if page.url == item.link %} class="current"{% endif %}>{{ item.name }}</a></li>
+    <li><a href="{{ item.link }}"{% if {{ site.url }}{{ site.baseurl }}page.url == item.link %} class="current"{% endif %}>{{ item.name }}</a></li>
   {% endfor %}
   </ul>
 </nav>
