--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/LAMAS/assets/css/styles.css"> {%comment%} remove /LAMAS before link for local testing {%endcomment%}
+    <link rel="stylesheet" href="/LAMAS_OR/assets/css/styles.css"> {%comment%} remove /LAMAS_OR before link for local testing {%endcomment%}
     <script src="https://kit.fontawesome.com/5fb7fcc0e3.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     {% feed_meta %}
