--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/LAMAS_OR/assets/css/styles.css"> {%comment%} remove /LAMAS_OR before link for local testing {%endcomment%}
     <script src="https://kit.fontawesome.com/5fb7fcc0e3.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/LAMAS_OR/assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/LAMAS_OR/assets/img/favicon.ico">
     {% feed_meta %}
     {% seo %}
   </head>
